--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,18 +7,42 @@
 
 </head>
 <body>
-<div class="container-fluid text-center"></div>
-  <div><h2>Manage Users</h2></div>
+<div class="container-fluid text-center">
+  <div class="h2 mt-3">Manage Users</div>
+  <div class="m-3">
+    <a class="h4" th:href="@{/users/new}">Add New User</a>
+  </div>
+
+  <div th:if="${message}" class="alert alert-success text-center">
+    [[${message}]]
+  </div>
   <div>
     <table class="table table-bordered">
-      <thead>
+      <thead class="thead-dark">
       <th>Id</th>
       <th>Email</th>
       <th>First Name</th>
       <th>Last Name</th>
+      <th>Manage</th>
       </thead>
+      <tbody>
+      <th:block th:each = "user : ${listUsers}">
+        <tr>
+          <td>[[${user.id}]]</td>
+          <td>[[${user.email}]]</td>
+          <td>[[${user.firstName}]]</td>
+          <td>[[${user.lastName}]]</td>
+          <td>
+            <a class="h4 mr-3" th:href="@{'/users/edit' + ${user.id}}">Edit</a>
+            <a class="h4" th:href="@{'/users/delete' + ${user.id}}">Delete</a>
+          </td>
+        </tr>
+      </th:block>
+
+      </tbody>
     </table>
 
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
