--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,7 +13,7 @@
     <a class="h4" th:href="@{/users/new}">Add New User</a>
   </div>
 
-  <div th:if="${message}" class="alert alert-success text-center">
+  <div >
     [[${message}]]
   </div>
   <div>
@@ -23,7 +23,8 @@
       <th>Email</th>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Manage</th>
+      <th>Enabled</th>
+      <th>manage</th>
       </thead>
       <tbody>
       <th:block th:each = "user : ${listUsers}">
@@ -32,9 +33,10 @@
           <td>[[${user.email}]]</td>
           <td>[[${user.firstName}]]</td>
           <td>[[${user.lastName}]]</td>
+          <td>[[${user.enabled}]]</td>
           <td>
-            <a class="h4 mr-3" th:href="@{'/users/edit' + ${user.id}}">Edit</a>
-            <a class="h4" th:href="@{'/users/delete' + ${user.id}}">Delete</a>
+            <a class="h4 mr-3" th:href="@{'/users/edit/' + ${user.id}}">Edit</a>
+            <a class="h4" th:href="@{'/users/delete/' + ${user.id}}">Delete</a>
           </td>
         </tr>
       </th:block>
